fix save existing message as template, and add unit test, r=rkent, bug 532050