mail/base/content/mailCommands.js
@@ -424,12 +424,32 @@ function GenerateFilenameFromMsgHdr(msgHdr) {
 
 }
 
-function SaveAsTemplate(uri, folder)
-{
-  if (uri) 
-  {
-    var hdr = messenger.msgHdrFromURI(uri);
-    var identity = getIdentityForHeader(hdr, Components.interfaces.nsIMsgCompType.Template);
+function saveAsUrlListener(aUri, aIdentity) {
+  this.uri = aUri;
+  this.identity = aIdentity;
+}
+
+saveAsUrlListener.prototype = {
+  OnStartRunningUrl: function(aUrl) {
+  },
+  OnStopRunningUrl: function(aUrl, aExitCode) {
+    messenger.saveAs(this.uri, false, this.identity, null);
+  }
+};
+
+function SaveAsTemplate(uri) {
+  if (uri) {
+    const Ci = Components.interfaces;
+    let hdr = messenger.msgHdrFromURI(uri);
+    let identity = getIdentityForHeader(hdr, Ci.nsIMsgCompType.Template);
+    let templates = MailUtils.getFolderForURI(identity.stationeryFolder, false);
+    if (!templates.parent) {
+      templates.setFlag(Ci.nsMsgFolderFlags.Templates);
+      let isImap = templates.server.type == "imap";
+      templates.createStorageIfMissing(new saveAsUrlListener(uri, identity));
+      if (isImap)
+        return;
+    }
     messenger.saveAs(uri, false, identity, null);
   }
 }
